--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+    <title>119 응급 화상 지원</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+<body>
+  <div id="vid-box"></div>
+
+  <form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+      <input type="text" name="username" id="username" placeholder="Pick a username!" />
+      <input type="submit" name="login_submit" value="Log In">
+  </form>
+
+  <form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
+    <input type="text" name="number" placeholder="Enter user to dial!" />
+    <input type="submit" value="Call"/>
+  </form>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
+  <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
+
+  <script>
+    var video_out = document.getElementById("vid-box");
+    function login(form) {
+      var phone = window.phone = PHONE({
+          number        : form.username.value || "Anonymous", // listen on username line else Anonymous
+          publish_key   : 'pub-c-99bfe32b-04e0-4067-961a-f28410406a6e',
+          subscribe_key : 'sub-c-37e5c210-7107-11e6-91d9-02ee2ddab7fe',
+      });
+      phone.ready(function(){ form.username.style.background="#55ff5b"; });
+      phone.receive(function(session){
+          session.connected(function(session) { video_out.appendChild(session.video); });
+          session.ended(function(session) { video_out.innerHTML=''; });
+      });
+      return false;
+    }
+
+    function makeCall(form) {
+      if (!window.phone) alert("Login First!");
+      else phone.dial(form.number.value);
+      return false;
+    }
+  </script>
+</body>
+</html>
