--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
   <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
-  <script src="/utils.js"></script>
-  <script src="/main.js"></script>
+  <script src="./utils.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
