--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-  <div id="vid-box" class="vid-box"></div>
-
-  <span id="status" class="status"></span>
+  <img src="./img/map.png" class="map">
+  <div id="vid-box" class="vid-box">
+    <span id="status" class="status"></span>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
