--- a/index.html
+++ b/index.html
@@ -6,32 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" media="all" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
+    <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv_3tGYTciRh7t-5e5L33ECMeqnsHFzxA&callback=initMap&language=ko&region=KR"
+      async></script>
 </head>
 <body>
-  <img src="./img/map.png" class="map">
+  <div id="map" class="map"></div>
+
   <div id="vid-box" class="vid-box">
     <span id="status" class="status"></span>
   </div>
 
-  <div id="chat-out" class="chat-out">
-    <p class="them">인천공단 소방서에 연결되었습니다.</p>
-    <p class="me">연기가 너무 심해서 말을 할수가 없어요.. 대피를 옥상으로 해야하나요?</p>
-    <p class="them">
-      1. 기도확보 및 호흡 확인<br>
-      2. 가슴압박 30회<br>
-      3. 인공호흡 2회<br>
-      4. 2번 3번을 그만하라고 할때까지 반복
-    </p>
-    <p class="them">14:23, 강남소방서 출동, 도착예상 7분</p>
-  </div>
-  <div class="chat-in-container">
-    <input type="text" id="chat-in"/>
-    <image src="./img/keyboard.png"/>
+  <div class="chat">
+    <div id="chat-out" class="chat-out">
+      <p class="them">인천공단 소방서에 연결되었습니다.</p>
+      <p class="me">연기가 너무 심해서 말을 할수가 없어요.. 대피를 옥상으로 해야하나요?</p>
+      <p class="them">
+        1. 기도확보 및 호흡 확인<br>
+        2. 가슴압박 30회<br>
+        3. 인공호흡 2회<br>
+        4. 2번 3번을 그만하라고 할때까지 반복
+      </p>
+      <p class="them">14:23, 강남소방서 출동, 도착예상 7분</p>
+    </div>
+    <div class="chat-in-container">
+      <input type="text" id="chat-in"/>
+      <image src="./img/keyboard.png"/>
+    </div>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
-  <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
   <script src="./utils.js"></script>
   <script src="./main.js"></script>
 </body>
