--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="http://vjs.zencdn.net/5.11.6/video-js.min.css" rel="stylesheet">
     <link rel="stylesheet" media="all" href="style.css" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
+    <script src="https://cdn.pubnub.com/pubnub-3.16.1.min.js"></script>
     <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv_3tGYTciRh7t-5e5L33ECMeqnsHFzxA&callback=initMap&language=ko&region=KR"
       async></script>
@@ -20,16 +22,15 @@
   </div>
 
   <div class="chat">
-    <div id="chat-out" class="chat-out">
-      <p class="them">인천공단 소방서에 연결되었습니다.</p>
-      <p class="me">연기가 너무 심해서 말을 할수가 없어요.. 대피를 옥상으로 해야하나요?</p>
-      <p class="them">
-        1. 기도확보 및 호흡 확인<br>
-        2. 가슴압박 30회<br>
-        3. 인공호흡 2회<br>
-        4. 2번 3번을 그만하라고 할때까지 반복
-      </p>
-      <p class="them">14:23, 강남소방서 출동, 도착예상 7분</p>
+    <div id="chat-out" class="chat-out"></div>
+    <div id="chat-buttons" class="chat-buttons">
+      <button id="chat-going" class="red">출동 알림</button>
+      <button id="chat-heimlich">응급처치<br>하임리히법</button>
+      <button id="chat-bleeding">응급처치<br>지혈</button>
+      <button id="chat-cpr-1">응급처치<br>CPR 1단계</button>
+      <button id="chat-cpr-2">응급처치<br>CPR 2단계</button>
+      <button id="chat-cpr-3">응급처치<br>CPR 3단계</button>
+      <button id="chat-cpr-4">응급처치<br>CPR 4단계</button>
     </div>
     <div class="chat-in-container">
       <input type="text" id="chat-in"/>
@@ -39,5 +40,6 @@
 
   <script src="./utils.js"></script>
   <script src="./main.js"></script>
+  <script src="http://vjs.zencdn.net/5.11.6/video.min.js"></script>
 </body>
 </html>
