--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-3.16.1.min.js"></script>
     <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv_3tGYTciRh7t-5e5L33ECMeqnsHFzxA&callback=initMap&language=ko&region=KR"
-      async></script>
 </head>
 <body>
   <div id="map" class="map"></div>
@@ -37,6 +35,7 @@
     </div>
   </div>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv_3tGYTciRh7t-5e5L33ECMeqnsHFzxA&callback=initMap&language=ko&region=KO" async></script>
   <script src="./utils.js"></script>
   <script src="./main.js"></script>
 </body>
